--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     <button type="submit"><img src="Screenshot_2019-06-10 DigitalOcean – The developer cloud.png"><p>Sign
                         up with Google</p></button>
                 </form>
-                <p>By signing up you agree to the Terms of Service. </p>
+                <p>By signing up you agree to the <a href="">Terms of Service. </a></p>
             </div>
         </div>
     </div>
